packages/tree-sitter/typedown-md/typedown-md/test/corpus/headings/basic.txt
================
Heading 1
================

# Hello world

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))))

================
Heading 2
================

## Subheading

---

(document
  (section
    (atx_heading
      (atx_h2_marker)
      heading_content: (inline))))

================
Heading 6
================

###### Deep heading

---

(document
  (section
    (atx_heading
      (atx_h6_marker)
      heading_content: (inline))))

================
Empty heading
================

#

---

(document
  (section
    (atx_heading
      (atx_h1_marker))))
