packages/tree-sitter/typedown-md/typedown-md/test/corpus/lists/basic.txt
================
Bullet list with minus
================

- one
- two

---

(document
  (section
    (list
      (list_item
        (list_marker_minus)
        (paragraph
          (inline)))
      (list_item
        (list_marker_minus)
        (paragraph
          (inline))))))

================
Bullet list with star
================

* one
* two

---

(document
  (section
    (list
      (list_item
        (list_marker_star)
        (paragraph
          (inline)))
      (list_item
        (list_marker_star)
        (paragraph
          (inline))))))

================
Ordered list
================

1. first
2. second

---

(document
  (section
    (list
      (list_item
        (list_marker_dot)
        (paragraph
          (inline)))
      (list_item
        (list_marker_dot)
        (paragraph
          (inline))))))

================
Single list item
================

- only one

---

(document
  (section
    (list
      (list_item
        (list_marker_minus)
        (paragraph
          (inline))))))
