packages/tree-sitter/typedown-md/typedown-md/test/corpus/sections/edge_cases.txt
================
Empty document
================


---

(document)

================
Only headings no pre-heading content
================

# First

# Second

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline)))
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))))

================
Heading after implicit section
================

Before

# After

---

(document
  (section
    (paragraph
      (inline)))
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))))

================
Deep nesting h1 through h4
================

# A

## B

### C

#### D

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))
    (section
      (atx_heading
        (atx_h2_marker)
        heading_content: (inline))
      (section
        (atx_heading
          (atx_h3_marker)
          heading_content: (inline))
        (section
          (atx_heading
            (atx_h4_marker)
            heading_content: (inline)))))))
